<resources>
    <string name="app_name">Frog</string>
    <string-array name="test_friends">
        <item>Markus</item>
        <item>Andy</item>
        <item>Daniel</item>
    </string-array>
    <string name="navbar_friends">Friends</string>
    <string name="navbar_groups">Groups</string>
    <string name="navbar_map">Map</string>
    <string name="navbar_me">Me</string>
    <string name="navbar_settings">Settings</string>
    <string name="scan" translatable="false">QR Scan</string>
    <string name="add_friend">Add Friend</string>
    <string name="update" translatable="false">Change User Info</string>
    <string name="delete">Delete</string>
    <string name="start_one">Making the most of travel</string>
    <string name="start_two">Let us help you split group travel costs efficiently</string>
    <string name="google_app_id">AIzaSyDC0HH2a9h8GK_zhjRJoQgHDWycsTPk9dg</string>
    <string name="amount">HALLO</string>
    <string name="no_expense">You don\'t have any expenses in this group yet.</string>
</resources>