<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lin"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorPetrol">

            <TextView
                android:id="@+id/imageFriendsWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:clickable="true"
                android:onClick="gotToFriendsActivity"
                android:text="@string/navbar_friends"
                android:drawableTop="@mipmap/ic_friends"/>

            <TextView
                android:id="@+id/imageGroupsWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:clickable="true"
                android:onClick="goToGroupActivity"
                android:text="@string/navbar_groups"
                android:drawableTop="@mipmap/ic_group"/>

            <TextView
                android:id="@+id/imageMapWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:clickable="true"
                android:onClick="goToMap"
                android:text="@string/navbar_map"
                android:drawableTop="@mipmap/ic_world"/>

            <TextView
                android:id="@+id/imageMeWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:clickable="true"
                android:onClick="goToMeActivity"
                android:text="@string/navbar_me"
                android:drawableTop="@mipmap/ic_me"/>

            <TextView
                android:id="@+id/imageSettingsWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:clickable="true"
                android:onClick="goToSettings"
                android:text="@string/navbar_settings"
                android:drawableTop="@mipmap/ic_settings"/> 

        </LinearLayout>
    </android.support.v7.widget.Toolbar>
</RelativeLayout>
